# MapLooper

./: .gitignore  .gitmodules  CMakeLists.txt  Clock.cpp  GestureLooper.sublime-project  README.md  TickTimer.cpp  sdkconfig  sdkconfig.defaults
components/GestureLooper/: CMakeLists.txt  (+15 more)
components/MapLooper/: CMakeLists.txt  Clock.cpp  GestureRecorder.cpp  GestureVoice.cpp  MIDI.cpp  MapLooper.cpp  Mapper.cpp  ParameterLayout.cpp  Pattern.cpp  Sequencer.cpp  Settings.cpp  Track.cpp  TrackParameters.cpp  Util.cpp
components/MapLooper/include/MapLooper/: Clock.hpp  Config.hpp  EventQueue.hpp  GestureRecorder.hpp  GestureVoice.hpp  MIDI.hpp  MapLooper.hpp  Mapper.hpp  Modulation.hpp  Parameter.hpp  ParameterLayout.hpp  Pattern.hpp  Queue.hpp  Sequencer.hpp  Settings.hpp  SignalInfo.hpp  Track.hpp  TrackParameters.hpp  Util.hpp
components/MapLooper/include/MapLooper/midi/: BLEMidiDevice.hpp
components/MapLooper/include/MapLooper/mpr/: Mapper.hpp
components/gl-app/: CMakeLists.txt  Clock.cpp  GestureLooper.cpp  GestureRecorder.cpp  Mapper.cpp  ParameterLayout.cpp  Pattern.cpp  Sequencer.cpp  Settings.cpp  Track.cpp  TrackParameters.cpp
components/gl-app/include/gl-app/: Clock.hpp  EventQueue.hpp  GestureLooper.hpp  GestureRecorder.hpp  Mapper.hpp  Parameter.hpp  ParameterLayout.hpp  Pattern.hpp  Queue.hpp  Sequencer.hpp  Settings.hpp  Track.hpp  TrackParameters.hpp
doc/: Doxyfile
include/: EventQueue.hpp  Pattern.hpp  Track.hpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Test-quantize.cpp  Test.cpp
visualization/: package.json  webpack.config.js
(+48 files in other folders)
